# tg_chat_search

./: .flake8  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  reindex.sh
chat_search/: __init__.py  db.py  embedder.py  embeddings.py  llm.py  main.py  search.py
chat_search/static/: index.html
scripts/: download_channels.py  download_chat.py  extract_threads.py  generate_embeddings.py  get_queries.py
