[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_search"
version = "0.1.0"
description = "Chat search tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.68.0",
    "fire>=0.7.0",
    "tqdm>=4.67.1",
    "vertexai>=1.71.1",
    "numpy>=1.24.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0",
    "openai>=1.82.0",
    "python-dotenv>=1.0.0",
    "telethon>=1.42.0",
]
